[project]
name = "ex1"
version = "0.1.0"
description = ""
authors = [
    {name = "hkanamit"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "matplotlib>=3.10.9",
    "pandas>=2.3.3",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
