
[project]
name = "ex1"
version = "0.1.0"
description = "Visualization of ISS orbit"
authors = [
    {name = "hkanamit"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy (<2.4)",
    "matplotlib (<3.10)",
    "pandas (<3.0)"
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
